trying google analytics again, this time in the html

--- a/node/views/index.jade
+++ b/node/views/index.jade
@@ -1,3 +1,5 @@
-canvas#canvas
+extend layout
 
-script(type='text/javascript', src='game.min.js')
+block content
+  canvas#canvas
+  script(type='text/javascript', src='game.min.js')
