--- a/node/views/layout.jade
+++ b/node/views/layout.jade
@@ -1,7 +1,19 @@
 doctype 5
 html
   head
-    title= title
+    title= "Number Maze"
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script type="text/javascript"
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-37054105-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
   body
     block content
